# serial_port_dfu

./: CMakeLists.txt  prj.Debug.conf  prj.MinSizeRel.conf  prj.RelWithDebInfo.conf  prj.Release.conf  prj.conf
boards/: nucleo_l152re.overlay
src/: main.c
